// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutSlidePanel should render when small 1`] = `
<div
  className="layout-slide-panel is-open is-overlay"
>
  <div
    aria-hidden="false"
    className="panel is-small is-animated"
  >
    <div>
      Panel Content
    </div>
  </div>
  <OverlayContainer
    className="content"
  >
    <Overlay
      backgroundStyle="dark"
      isOpen={true}
      isRelativeToContainer={true}
      isScrollable={false}
      onRequestClose={[Function]}
    />
    <main
      className="main-container"
      data-terra-layout-main={true}
      tabIndex="-1"
    >
      <div>
        Child
      </div>
    </main>
  </OverlayContainer>
</div>
`;

exports[`LayoutSlidePanel should render when tiny 1`] = `
<div
  className="layout-slide-panel is-open is-overlay"
>
  <div
    aria-hidden="false"
    className="panel is-tiny is-animated"
  >
    <div>
      Panel Content
    </div>
  </div>
  <OverlayContainer
    className="content"
  >
    <Overlay
      backgroundStyle="dark"
      isOpen={true}
      isRelativeToContainer={true}
      isScrollable={false}
      onRequestClose={[Function]}
    />
    <main
      className="main-container"
      data-terra-layout-main={true}
      tabIndex="-1"
    >
      <div>
        Child
      </div>
    </main>
  </OverlayContainer>
</div>
`;

exports[`LayoutSlidePanel should render with provided props 1`] = `
<div
  className="layout-slide-panel is-open is-overlay"
>
  <div
    aria-hidden="false"
    className="panel is-animated"
  >
    <div>
      Panel Content
    </div>
  </div>
  <OverlayContainer
    className="content"
  >
    <Overlay
      backgroundStyle="clear"
      isOpen={true}
      isRelativeToContainer={true}
      isScrollable={false}
      onRequestClose={[Function]}
    />
    <main
      className="main-container"
      data-terra-layout-main={true}
      tabIndex="-1"
    >
      <div>
        Child
      </div>
    </main>
  </OverlayContainer>
</div>
`;

exports[`LayoutSlidePanel should render without optional props 1`] = `
<div
  className="layout-slide-panel is-overlay"
>
  <div
    aria-hidden="true"
    className="panel"
  />
  <OverlayContainer
    className="content"
  >
    <Overlay
      backgroundStyle="clear"
      isOpen={false}
      isRelativeToContainer={true}
      isScrollable={false}
    />
    <main
      className="main-container"
      data-terra-layout-main={true}
      tabIndex="-1"
    />
  </OverlayContainer>
</div>
`;
